--- a/bower.json
+++ b/bower.json
@@ -9,5 +9,8 @@
     "highcharts-ng": "~0.0.6",
     "angular-socket-io": "~0.6.0",
     "angular-ui-router": "~0.2.10"
+  },
+  "resolutions": {
+    "angular": "1.3.0-beta.13"
   }
 }
